RC_Car_V2_FreeRTOS.cydsn/BUILD.log
--------------- Build Started: 04/01/2021 19:42:07 Project: RC_Car_V2_FreeRTOS, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
Initializing Build...
The code generation step is up to date.
Pre-build Steps...
Compiling...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I..\FreeRTOS\Source -I..\FreeRTOS\Source\include -I..\FreeRTOS\Source\portable\GCC\ARM_CM3 -I..\FreeRTOS\Source\portable\MemMang -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/led_ctrl.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c led_ctrl.c -o .\CortexM3\ARM_GCC_541\Debug\led_ctrl.o
led_ctrl.c:48:1: error: unknown type name 'i2c_parameters_t'
 i2c_parameters_t led_i2c_param = &i2c_parameters[LED_ID];
 ^
led_ctrl.c:48:34: warning: initialization makes integer from pointer without a cast [-Wint-conversion]
 i2c_parameters_t led_i2c_param = &i2c_parameters[LED_ID];
                                  ^
led_ctrl.c:51:13: error: static declaration of 'led_sel' follows non-static declaration
 static void led_sel(uint8 led, uint8 status)
             ^
In file included from led_ctrl.c:14:0:
led_ctrl.h:34:6: note: previous declaration of 'led_sel' was here
 void led_sel(uint8 led, uint8 status);
      ^
led_ctrl.c: In function 'led_sel':
led_ctrl.c:59:42: error: 'led_buffer' undeclared (first use in this function)
             I2C_MasterWriteBuf(LED_ADDR, led_buffer, 2, I2C_MODE_COMPLETE_XFER);
                                          ^
led_ctrl.c:59:42: note: each undeclared identifier is reported only once for each function it appears in
led_ctrl.c:60:19: warning: unused variable 'stat' [-Wunused-variable]
             uint8 stat = I2C_MasterStatus();
                   ^
led_ctrl.c: In function 'enqueue':
led_ctrl.c:111:8: error: 'newnode' undeclared (first use in this function)
     if(newnode == NULL)
        ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
led_ctrl.c:109:11: warning: unused variable 'newnnode' [-Wunused-variable]
     node* newnnode = pvPortMalloc(sizeof(node));
           ^
led_ctrl.c: In function 'led_setup':
led_ctrl.c:180:38: error: 'led_buffer' undeclared (first use in this function)
         I2C_MasterWriteBuf(LED_ADDR, led_buffer, WR_BUFF_SIZE, I2C_MODE_COMPLETE_XFER);
                                      ^
led_ctrl.c:185:5: error: too few arguments to function 'init_queue'
     init_queue();
     ^
led_ctrl.c:98:13: note: declared here
 static void init_queue(queue *q)
             ^
led_ctrl.c:166:11: warning: variable 'wr_buff' set but not used [-Wunused-but-set-variable]
     uint8 wr_buff[WR_BUFF_SIZE];
           ^
led_ctrl.c: At top level:
led_ctrl.c:51:13: warning: 'led_sel' defined but not used [-Wunused-function]
 static void led_sel(uint8 led, uint8 status)
             ^
led_ctrl.c:105:13: warning: 'enqueue' defined but not used [-Wunused-function]
 static bool enqueue(queue *q, uint8 value)
             ^
led_ctrl.c:137:14: warning: 'dequeue' defined but not used [-Wunused-function]
 static uint8 dequeue(queue* q)
              ^
--------------- Build Failed: 04/01/2021 19:42:10 ---------------
